--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-controlable=no">
 
-        <link rel="stylesheet" href="wordle.css">
-        <script src="wordle.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
 
     <body>
