--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <body>
         <h1 id="title">Vèrblé!</h1>
-        <h3 id="Statement">Code inspired by: <a href="https://www.youtube.com/watch?v=MM9FAV_CEkU&t=0s">Code</a></h3>
-        <h4 id="Statement">Project inspired by: <a href="https://www.nytimes.com/games/wordle/index.html">Project</a></h4>
+        <h3 id="Statement-1">Code inspired by: <a href="https://www.youtube.com/watch?v=MM9FAV_CEkU&t=0s">Code</a></h3>
+        <h4 id="Statement-2">Project inspired by: <a href="https://www.nytimes.com/games/wordle/index.html">Project</a></h4>
         <hr>
         <br>
         <div id="board">
