--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 id="title">Vèrblé!</h1>
         <h3 id="Statement">Code inspired by: <a href="https://www.youtube.com/watch?v=MM9FAV_CEkU&t=0s">Code</a></h3>
         <h4 id="Statement">Project inspired by: <a href="https://www.nytimes.com/games/wordle/index.html">Project</a></h4>
+        <h2 id="Statement">Rules: Guess any french verb!</h2>
         <hr>
         <br>
         <div id="board">
